@@ -4,7 +4,7 @@
 // <ecn@clark.net> XtReactor implementation.
 
 #include "ace/OS_main.h"
-#include "ace/XtReactor.h"
+#include "ace/XtReactor/XtReactor.h"
 #include "ace/Reactor.h"
 #include "ace/Message_Block.h"
 #include "ace/Log_Msg.h"
